# asteroid

./: .gitignore  .gitmodules  1.ppm  2.ppm  CMakeLists.txt  LICENSE  README.md  convert.py  image.ppm
.github/workflows/: cmake.yml
Common/: CMakeLists.txt  aabb.cpp  aabb.h  camera.cpp  camera.h  color.h  perlin.cpp  perlin.h  randomGenerator.h  ray.h  rtw_stb_image.h  rtweekend.h  texture.h  vec3.h
Common/Material/: dielectric.cpp  diffuse_light.cpp  diffuse_light.h  isotropic.h  lambertian.cpp  material.h  metal.cpp  metal.h
Common/Object/: aarect.cpp  bvh.cpp  bvh.h  constant_medium.cpp  constant_medium.h  hittable.h  hittable_list.cpp  hittable_list.h  moving_sphere.cpp  moving_sphere.h  sphere.cpp
Common/Object/Transform/: rotate_y.h
Common/Texture/: checker_texture.cpp  image_texture.cpp  noise_texture.cpp  noise_texture.h
InOneWeekend/: CMakeLists.txt  hittable.h  hittable_list.h  main.cc  material.h  sphere.h
TheNextWeek/: CMakeLists.txt  aarect.h  box.h  bvh.h  constant_medium.h  hittable.h  hittable_list.h  main.cc  material.h  moving_sphere.h  sphere.h
Utility/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
cmake/: FindOptiX.cmake  imgui.cmake
path_tracer/: path_tracer.cpp  path_tracer_layer.cpp  path_tracer_layer.h
ray_tracing_in_one_weekend/: CMakeLists.txt
ray_tracing_in_one_weekend/InOneWeekend/: in_one_weekend.cc
ray_tracing_in_one_weekend/TheNextWeek/: the_next_weekend.cc
ray_tracing_in_one_weekend/archive/common/: CMakeLists.txt  aabb.h  rng.h  vec3.cpp  vec3.h
ray_tracing_in_one_weekend/archive/common/Material/: dielectric.cpp  dielectric.h  isotropic.cpp  lambertian.h  material.h  metal.cpp
ray_tracing_in_one_weekend/archive/common/Object/: box.cpp  box.h  bvh.cpp  bvh.h  constant_medium.cpp
ray_tracing_in_one_weekend/archive/common/Texture/: checker_texture.cpp  image_texture.cpp  image_texture.h  solid_color.cpp  solid_color.h
ray_tracing_in_one_weekend/common/: utils.h
ray_tracing_in_one_weekend/common/Object/: aarect.cpp  aarect.h  sphere.h
ray_tracing_in_one_weekend/common/Texture/: checker_texture.h  texture.h
ray_tracing_in_one_weekend/one_weekend/: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  main.cu  ray.h  renderer.h  sphere.h
ray_tracing_in_one_weekend/test/: CMakeLists.txt  test_cuda.cu
sandbox/: CMakeLists.txt  sandbox.cpp
sandbox/cuda_opengl/: CMakeLists.txt  main.cpp  main.h
sandbox/optix/: CMakeLists.txt  launchParams.h  optix_app.cpp  optix_layer.cpp  optix_layer.h  program.cu  renderer.cu  renderer.h
sandbox/path_tracer/: CMakeLists.txt  path_tracer.h  path_tracer_app.cpp  path_tracer_kernel.h  path_tracer_layer.cpp  path_tracer_layer.h  renderer.cu  renderer.h
source/: CMakeLists.txt  astpch.h
source/asteroid/app/: application.cpp  application.h  camera_controller.cpp  camera_controller.h  entry_point.h  image.cpp  image.h  layer.cpp  layer.h  window.cpp  window.h
source/asteroid/app/imgui/: imgui_layer.cpp  imgui_layer.h
source/asteroid/app/input/: input.cpp  input.h  key_code.h
source/asteroid/base/: application.cpp  application.h  entry_point.h  image.cpp  image.cu  image.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  window.cpp  window.h
source/asteroid/bsdf/: glass.h  lambert.h  metal.h
source/asteroid/core/: application.cpp  application.h  core.h  entry_point.h  graphic_context.h  input.h  key_code.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  macro.h  mouse_button_code.h  time_step.h  window.cpp  window.h
source/asteroid/cuda/: README.md  buffer_view.h  device_buffer.h  random.h
source/asteroid/cuda/details/: buffer_view.inl  device_buffer.inl
source/asteroid/event/: application_event.h  event.h  key_event.h  mouse_event.h
source/asteroid/imgui/: imgui_layer.cpp  imgui_layer.h
source/asteroid/input/: input.cpp  input.h  key_code.h
source/asteroid/kernel/: interact.h  intersect.h  intersection.h  path_trace.h  struct.h  traceRay.h  trace_ray.h
source/asteroid/opengl/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  pixel_buffer.cpp  pixel_buffer.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
source/asteroid/optix/: context.cpp  context.h
source/asteroid/renderer/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.cpp_  camera_controller.h  camera_controller.h_  image.cu  intersection.h  kernel.cu  kernel.h  lib.cu  lib.h  path_tracer.cu  path_tracer.h  path_tracer_kernel.h  random.h  ray.h  renderer.cpp  renderer.cu  renderer.h  scene.cpp  scene.h  scene_struct.h
source/asteroid/shader/: directLight.h  direct_light.h  path_trace.h  random.h  render.h  sampling.h  struct.h  transform.h  util.h
source/asteroid/shader/bsdf/: README.md  conductor.h  dielectric.h  diffuse.h  fresnel.h  gltf.h  lambert.h
source/asteroid/shader/pipeline/: intersect.h  path_trace.h  trace_ray.h
source/asteroid/shader/ray_trace/: any_hit.h  closest_hit.h  direct_light.h  intersection.h  miss.h  path_trace.h  ray_generation.h  sample_pixel.h  trace_ray.h  traversal.h
source/asteroid/util/: buffer.h  device_buffer.h  exception.cpp  exception.h  helper_cuda.h  log.cpp  log.h  macro.h  matrix.h  preprocessor.h  quaternion.h  timer.cpp  timer.h  unique_ptr.h  vec_math.h
source/platform/opengl/: imgui_opengl.cpp
source/platform/windows/: window.cpp  window.h  windows_input.cpp  windows_input.h  windows_window.cpp  windows_window.h
src/: CMakeLists.txt  application.h  main.cpp  renderer.cpp  renderer.h
src/control/: input.cpp  input.h  keycode.h
src/core/: log.cpp  log.h  window.cpp  window.h
src/glwrapper/: shader.cpp  shader.h  texture.cpp  texture.h
src/opengl/: context.h  shader.h  texture.h
src/util/: application.cpp  application.h  log.cpp  log.h  macros.h  screen.cpp  screen.h  stop_watch.h
test/: CMakeLists.txt
test/optix/: CMakeLists.txt  draw_solid_color.cu
(+1 files in other folders)
